# aliroot-lite

./: CMakeLists.txt  README.md  aliroot-lite-config.cmake
ana-alice/: CMakeLists.txt  aliroot-lite-ana-alice-linkdef.h
ana-base/: CMakeLists.txt  aliroot-lite-ana-base-linkdef.h
aod/: CMakeLists.txt  aliroot-lite-aod-linkdef.h
base/: AliVEventHandler.h  CMakeLists.txt
cdb/: AliCDBGrid.cxx  AliDCSSensor.cxx  CMakeLists.txt  aliroot-lite-cdb-linkdef.h
esd/: AliESDCosmicTrack.h  AliExpression.h  CMakeLists.txt  aliroot-lite-esd-linkdef.h
stat/: CMakeLists.txt  aliroot-lite-stat-linkdef.h
steer/: CMakeLists.txt  aliroot-lite-steer-linkdef.h
