find_package(VMC REQUIRED)

add_library(aliroot-lite-base SHARED)

target_sources(aliroot-lite-base PRIVATE
  AliCentrality.cxx
  AliCheb3D.cxx
  AliCheb3DCalc.cxx
  AliCodeTimer.cxx
  AliCollisionGeometry.cxx
  AliCounterCollection.cxx
  AliDAQ.cxx
  AliDataFile.cxx
  AliDetectorEventHeader.cxx
  AliDetectorPID.cxx
  AliEMCALPIDResponse.cxx
  AliEventplane.cxx
  AliEventTag.cxx
  AliExternalTrackParam.cxx
  AliFileUtilities.cxx
  AliGenCocktailEventHeader.cxx
  AliGenEventHeader.cxx
  AliGenHijingEventHeader.cxx
  AliGenDPMjetEventHeader.cxx
  AliGenPythiaEventHeader.cxx
  AliHMPIDPIDParams.cxx
  AliHMPIDPIDResponse.cxx
  AliHeader.cxx
  AliITSPIDResponse.cxx
  AliITSPidParams.cxx
  AliInputEventHandler.cxx
  AliLHCTag.cxx
  AliLog.cxx
  AliMCEvent.cxx
  AliMCEventHandler.cxx
  AliMCParticle.cxx
  AliMCVertex.cxx
  AliMagF.cxx
  AliMagFast.cxx
  AliMagWrapCheb.cxx
  AliMergeableCollection.cxx
  AliMultSelectionBase.cxx
  AliMultSelectionBase.cxx
  AliNeutralTrackParam.cxx
  AliOADBContainer.cxx
  AliPDG.cxx
  AliPID.cxx
  AliPIDResponse.cxx
  AliPIDValues.cxx
  AliProdInfo.cxx
  AliQA.cxx
  AliRefArray.cxx
  AliRunTag.cxx
  AliStack.cxx
  AliSysInfo.cxx
  AliTOFHeader.cxx
  AliTOFPIDParams.cxx
  AliTOFPIDResponse.cxx
  AliTOFTriggerMask.cxx
  AliTPCPIDResponse.cxx
  AliTPCdEdxInfo.cxx
  AliTRDNDFast.cxx
  AliTRDPIDParams.cxx
  AliTRDPIDReference.cxx
  AliTRDPIDResponse.cxx
  AliTRDPIDResponseObject.cxx
  AliTRDdEdxParams.cxx
  AliTimeStamp.cxx
  AliTrackReference.cxx
  AliTriggerScalers.cxx
  AliTriggerScalersRecord.cxx
  AliVAD.cxx
  AliVAODHeader.cxx
  AliVCaloCells.cxx
  AliVCaloTrigger.cxx
  AliVCluster.cxx
  AliVCuts.cxx
  AliVEvent.cxx
  AliVEventHandler.cxx
  AliVHeader.cxx
  AliVMisc.cxx
  AliVMultiplicity.cxx
  AliVParticle.cxx
  AliVTOFHit.cxx
  AliVTOFMatch.cxx
  AliVTOFcluster.cxx
  AliVTrack.cxx
  AliVTrdTrack.cxx
  AliVTrdTracklet.cxx
  AliVVZERO.cxx
  AliVVZEROfriend.cxx
  AliVVertex.cxx
  AliVZDC.cxx
  AliVfriendEvent.cxx
  AliVfriendTrack.cxx
  AliDetectorTag.cxx
  AliFileTag.cxx
)


target_link_libraries(aliroot-lite-base PUBLIC 
  aliroot-lite-stat
  VMCLibrary
)

target_include_directories(aliroot-lite-base
    PUBLIC
            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    INTERFACE
            $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)

set_property(TARGET aliroot-lite-base PROPERTY PUBLIC_HEADER 
  AliCentrality.h
  AliCheb3DCalc.h
  AliCodeTimer.h
  AliCounterCollection.h
  AliDAQ.h
  AliDataFile.h
  AliDetectorEventHeader.h
  AliDetectorPID.h
  AliEventplane.h
  AliExternalTrackParam.h
  AliFileUtilities.h
  AliGenCocktailEventHeader.h
  AliGenEventHeader.h
  AliGenHijingEventHeader.h
  AliGenDPMjetEventHeader.h
  AliGenPythiaEventHeader.h
  AliHMPIDPIDParams.h
  AliHeader.h
  AliITSPidParams.h
  AliInputEventHandler.h
  AliLog.h
  AliMCEvent.h
  AliMCEventHandler.h
  AliMCParticle.h
  AliMCVertex.h
  AliMagF.h
  AliMagFast.h
  AliMagWrapCheb.h
  AliMergeableCollection.h
  AliMultSelectionBase.h
  AliMultSelectionBase.h
  AliNeutralTrackParam.h
  AliOADBContainer.h
  AliPDG.h
  AliPID.h
  AliPIDValues.h
  AliProdInfo.h
  AliRefArray.h
  AliRunTag.h
  AliStack.h
  AliSysInfo.h
  AliTOFHeader.h
  AliTOFPIDParams.h
  AliTOFTriggerMask.h
  AliTPCdEdxInfo.h
  AliTrackReference.h
  AliTRDNDFast.h
  AliTRDPIDParams.h
  AliTRDPIDReference.h
  AliTRDPIDResponseObject.h
  AliTRDdEdxParams.h
  AliTimeStamp.h
  AliTriggerBCMask.h
  AliTriggerScalers.h
  AliTriggerScalersRecord.h
  AliVAD.h
  AliVAODHeader.h
  AliVCaloCells.h
  AliVCaloTrigger.h
  AliVCluster.h
  AliVCuts.h
  AliVEvent.h
  AliVEventHandler.h
  AliVHeader.h
  AliVMisc.h
  AliVMultiplicity.h
  AliVParticle.h
  AliVTOFHit.h
  AliVTOFMatch.h
  AliVTOFcluster.h
  AliVTrack.h
  AliVTrdTrack.h
  AliVTrdTracklet.h
  AliVVZERO.h
  AliVVZEROfriend.h
  AliVVertex.h
  AliVZDC.h
  AliVfriendEvent.h
  AliVfriendTrack.h
)

root_generate_dictionary(G__AliRootLiteBase
  AliCentrality.h
  AliCheb3DCalc.h
  AliCodeTimer.h
  AliCounterCollection.h
  AliDAQ.h
  AliDataFile.h
  AliDetectorEventHeader.h
  AliDetectorPID.h
  AliEventplane.h
  AliExternalTrackParam.h
  AliFileUtilities.h
  AliGenCocktailEventHeader.h
  AliGenEventHeader.h
  AliGenHijingEventHeader.h
  AliGenDPMjetEventHeader.h
  AliGenPythiaEventHeader.h
  AliHMPIDPIDParams.h
  AliHeader.h
  AliITSPidParams.h
  AliInputEventHandler.h
  AliLog.h
  AliMCEvent.h
  AliMCEventHandler.h
  AliMCVertex.h
  AliMagF.h
  AliMagFast.h
  AliMagWrapCheb.h
  AliMergeableCollection.h
  AliMultSelectionBase.h
  AliMultSelectionBase.h
  AliNeutralTrackParam.h
  AliOADBContainer.h
  AliPDG.h
  AliPIDValues.h
  AliProdInfo.h
  AliRefArray.h
  AliRunTag.h
  AliSysInfo.h
  AliTOFHeader.h
  AliTOFPIDParams.h
  AliTOFTriggerMask.h
  AliTPCdEdxInfo.h
  AliTRDNDFast.h
  AliTRDPIDParams.h
  AliTRDPIDReference.h
  AliTRDPIDResponseObject.h
  AliTRDdEdxParams.h
  AliTimeStamp.h
  AliTriggerBCMask.h
  AliTriggerScalers.h
  AliTriggerScalersRecord.h
  AliVAD.h
  AliVAODHeader.h
  AliVCaloCells.h
  AliVCaloTrigger.h
  AliVCluster.h
  AliVCuts.h
  AliVEvent.h
  AliVEventHandler.h
  AliVHeader.h
  AliVMisc.h
  AliVMultiplicity.h
  AliVParticle.h
  AliVTOFHit.h
  AliVTOFMatch.h
  AliVTOFcluster.h
  AliVTrack.h
  AliVTrdTrack.h
  AliVTrdTracklet.h
  AliVVZERO.h
  AliVVZEROfriend.h
  AliVVertex.h
  AliVZDC.h
  AliVfriendEvent.h
  AliVfriendTrack.h
                         aliroot-lite-base-linkdef.h
  MODULE aliroot-lite-base)
 
install(TARGETS aliroot-lite-base)

