find_package(VMC REQUIRED)

add_library(aliroot-lite-esd SHARED)

target_sources(aliroot-lite-esd PRIVATE
  AliDetectorRecoParam.cxx
  AliESD.cxx
  AliESDACORDE.cxx
  AliESDAD.cxx
  AliESDADfriend.cxx
  AliESDCaloCells.cxx
  AliESDCaloCluster.cxx
  AliESDCaloTrigger.cxx
  AliESDCalofriend.cxx
  AliESDCosmicTrack.cxx
  AliESDEvent.cxx
  AliESDFIT.cxx
  AliESDFMD.cxx
  AliESDHLTtrack.cxx
  AliESDHeader.cxx
  AliESDInputHandler.cxx
  AliESDMuonCluster.cxx
  AliESDMuonGlobalTrack.cxx
  AliESDMuonPad.cxx
  AliESDMuonTrack.cxx
  AliESDPmdTrack.cxx
  AliESDRun.cxx
  AliESDTOFCluster.cxx
  AliESDTOFHit.cxx
  AliESDTOFMatch.cxx
  AliESDTZERO.cxx
  AliESDTZEROfriend.cxx
  AliESDTrdTrack.cxx
  AliESDTrdTracklet.cxx
  AliESDTrdTrigger.cxx
  AliESDUtils.cxx
  AliESDV0Params.cxx
  AliESDVZERO.cxx
  AliESDVZEROfriend.cxx
  AliESDVertex.cxx
  AliESDZDC.cxx
  AliESDcascade.cxx
  AliESDfriend.cxx
  AliESDfriendTrack.cxx
  AliESDkink.cxx
  AliESDpid.cxx
  AliESDtrack.cxx
  AliESDv0.cxx
  AliExpression.cxx
  AliFMDFloatMap.cxx
  AliFMDMap.cxx
  AliGRPRecoParam.cxx
  AliKFParticle.cxx
  AliKFParticleBase.cxx
  AliMultiplicity.cxx
  AliRawDataErrorLog.cxx
  AliStrLine.cxx
  AliTrackPointArray.cxx
  AliTrackerBase.cxx
  AliTriggerBCMask.cxx
  AliTriggerClass.cxx
  AliTriggerCluster.cxx
  AliTriggerConfiguration.cxx
  AliTriggerDescriptor.cxx
  AliTriggerIR.cxx
  AliTriggerInput.cxx
  AliTriggerInteraction.cxx
  AliTriggerPFProtection.cxx
  AliTriggerScalersESD.cxx
  AliTriggerScalersESD.cxx
  AliTriggerScalersRecordESD.cxx
  AliV0HypSel.cxx
  AliVertex.cxx
  AliVertexerTracks.cxx
)

target_link_libraries(aliroot-lite-esd PUBLIC aliroot-lite-base 
  ROOT::Geom 
  ROOT::Graf3d 
  ROOT::Minuit
  ROOT::Physics 
  VMCLibrary
)

target_include_directories(aliroot-lite-esd
    PUBLIC
            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
    INTERFACE
            $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)

set_property(TARGET aliroot-lite-esd PROPERTY PUBLIC_HEADER 
  AliCascadeVertexer.h
  AliDetectorRecoParam.h
  AliESD.h
  AliESDACORDE.h
  AliESDAD.h
  AliESDADfriend.h
  AliESDCaloCells.h
  AliESDCaloCluster.h
  AliESDCaloTrigger.h
  AliESDCalofriend.h
  AliESDCosmicTrack.h
  AliESDEvent.h
  AliESDfriend.h
  AliESDFIT.h
  AliESDFMD.h
  AliESDHeader.h
  AliESDHLTtrack.h
  AliESDInputHandler.h
  AliESDMuonCluster.h
  AliESDMuonGlobalTrack.h
  AliESDMuonPad.h
  AliESDMuonTrack.h
  AliESDRun.h
  AliESDTOFHit.h
  AliESDTOFCluster.h
  AliESDTOFMatch.h
  AliESDTZERO.h
  AliESDTZEROfriend.h
  AliESDTrdTrack.h
  AliESDTrdTracklet.h
  AliESDTrdTrigger.h
  AliESDUtils.h
  AliESDV0Params.h
  AliESDVZERO.h
  AliESDVZEROfriend.h
  AliESDVertex.h
  AliESDZDC.h
  AliESDfriendTrack.h
  AliESDkink.h
  AliESDpid.h
  AliESDtrack.h
  AliESDv0.h
  AliExpression.h
  AliGRPRecoParam.h
  AliKFParticle.h
  AliKFParticleBase.h
  AliMultiplicity.h
  AliStrLine.h
  AliTrackPointArray.h
  AliTrackerBase.h
  AliTriggerBCMask.h
  AliTriggerClass.h
  AliTriggerCluster.h
  AliTriggerConfiguration.h
  AliTriggerDescriptor.h
  AliTriggerIR.h
  AliTriggerInput.h
  AliTriggerInteraction.h
  AliTriggerPFProtection.h
  AliTriggerScalersESD.h
  AliTriggerScalersESD.h
  AliTriggerScalersRecordESD.h
  AliV0HypSel.h
  AliV0vertexer.h
  AliVertex.h
  AliVertexerTracks.h
)

root_generate_dictionary(G__AliRootLiteesd
  AliDetectorRecoParam.h
  AliESD.h
  AliESDACORDE.h
  AliESDAD.h
  AliESDADfriend.h
  AliESDCaloCells.h
  AliESDCaloCluster.h
  AliESDCaloTrigger.h
  AliESDCalofriend.h
  AliESDCosmicTrack.h
  AliESDEvent.h
  AliESDFMD.h
  AliESDHLTtrack.h
  AliESDInputHandler.h
  AliESDMuonCluster.h
  AliESDMuonGlobalTrack.h
  AliESDMuonPad.h
  AliESDMuonTrack.h
  AliESDRun.h
  AliESDTOFHit.h
  AliESDTZERO.h
  AliESDTZEROfriend.h
  AliESDTrdTrack.h
  AliESDTrdTrigger.h
  AliESDUtils.h
  AliESDV0Params.h
  AliESDVZERO.h
  AliESDVertex.h
  AliESDZDC.h
  AliESDfriendTrack.h
  AliESDkink.h
  AliESDpid.h
  AliESDtrack.h
  AliESDv0.h
  AliExpression.h
  AliGRPRecoParam.h
  AliKFParticle.h
  AliKFParticleBase.h
  AliStrLine.h
  AliTrackerBase.h
  AliTriggerBCMask.h
  AliTriggerClass.h
  AliTriggerCluster.h
  AliTriggerConfiguration.h
  AliTriggerDescriptor.h
  AliTriggerIR.h
  AliTriggerInput.h
  AliTriggerInteraction.h
  AliTriggerPFProtection.h
  AliTriggerScalersESD.h
  AliTriggerScalersESD.h
  AliTriggerScalersRecordESD.h
  AliV0HypSel.h
  AliVertexerTracks.h
                         aliroot-lite-esd-linkdef.h
  MODULE aliroot-lite-esd)
 
install(TARGETS aliroot-lite-esd EXPORT aliroot-lite)

